samples/_failures_safe/1761644379_afede8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0bf6ae33.c: In function ‘main’:
./samples/SAFE/__tmp_0bf6ae33.c:147:17: error: expected expression at end of input
  147 |                 if (
      |                 ^~
./samples/SAFE/__tmp_0bf6ae33.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0bf6ae33.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0bf6ae33.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0bf6ae33.c:147:17: error: expected declaration or statement at end of input
